User Story 3, ingest Kafka data into Spark Streaming