@@ -8,6 +8,7 @@ lazy val root = project
     libraryDependencies ++= Seq(
       "org.apache.spark" %% "spark-core" % "3.5.7",
       "org.apache.spark" %% "spark-sql" % "3.5.7",
+      "org.apache.spark" %% "spark-sql-kafka-0-10" % "3.5.7",
       "com.typesafe" % "config" % "1.4.3",
       "com.lihaoyi" %% "requests" % "0.8.0",
       "io.circe" %% "circe-parser" % "0.14.7",
@@ -17,7 +18,12 @@ lazy val root = project
       "org.scalameta" %% "munit" % "1.0.0" % Test
   ),
 
-  Compile / run / fork := true
+  Compile / run / fork := true,
+  Compile / run / javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    )
 )
 
    
